# supportflow-ai

./: .env.example  .gitignore  ARCHITECTURE.md  Agents.md  DEBUGGING_METHODOLOGY.md  Dockerfile.api  Dockerfile.eval  Dockerfile.ui  GUARDRAILS.md  LICENSE  PATH_TO_PRODUCTION.md  PRD_BRD.md  PROMPT_AUDIT.md  README.md  alembic.ini  docker-compose.yml  eval_results.md  pyproject.toml
app/: __init__.py  config.py  main.py
app/core/: __init__.py  errors.py  logging.py  tracing.py
app/db/: models.py  session.py  types.py
app/evals/: __init__.py  metrics.py  runner.py  seed.py
app/graph/: __init__.py  build_graph.py  clarification.py  nodes.py  state.py
app/llm/: __init__.py  gateway.py  schemas.py
app/observability/: langfuse_optional.py  local_trace.py  logging.py  redaction.py  tracing.py
app/prompts/: __init__.py  manager.py  renderer.py  schemas.py
docs/: README.md
evals/: clarification_cases.jsonl  golden_set.jsonl  redteam_cases.jsonl
prompts/: registry.yaml
streamlit_app/: Home.py
tests/: conftest.py  test_booking_flow.py  test_clarification_flow.py  test_config.py  test_confirmation_gate.py  test_embedding_backend.py  test_eval_cases.py  test_eval_harness.py  test_graph_routing.py  test_health.py  test_hitl_approval.py  test_hybrid_retrieval.py  test_ingestion.py  test_llm_gateway.py  test_migration_sql.py  test_models.py  test_observability.py  test_prompt_manager.py  test_reembed.py  test_retrieval_exclusion.py  test_service_area.py  test_streamlit_operator_endpoints.py  test_streamlit_ops_ui.py  test_tool_registry.py  test_tracing.py
(+57 files in other folders)
